--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,54 @@
-.env
+# Dependencies
 node_modules
+server/node_modules
+
+# Production build
 dist
+build
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+server/.env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
+*.swp
+*.swo
+*.sublime-project
+*.sublime-workspace
+
+# Testing
+coverage
+
+# TypeScript
+*.tsbuildinfo
+
+# Uploads
+server/uploads/*
+!server/uploads/.gitkeep
+uploads/*
+!uploads/.gitkeep
+
+# Docker
+docker-compose.override.yml
