--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "mysql2": "^3.11.3",
+    "nodemailer": "^7.0.11",
     "zod": "^3.23.8"
   },
   "devDependencies": {
